# ubuntu-merges-operator

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README  README.md  SECURITY.md  addcomment.py  charmcraft.yaml  check-pool.py  cron.daily  expire-pool.py  generate-diffs.py  generate-dpatches.py  generate-patches.py  grab-merge.sh  mail-bugs.py  manual-status.py  merge-status.py  mom.service  mom.timer  momlib.py  pack-archive.sh  produce-merges.py  publish-patches.py  pyproject.toml  requirements-dev.txt  requirements.txt  stats-graphs.py  stats.py  syndicate.py  update-pool.py  update-sources.py
.github/: CODEOWNERS
.github/workflows/: build-and-test.yaml  pull-request.yaml
app/: README  check-pool.py  cron.daily  expire-pool.py  generate-diffs.py  generate-dpatches.py  generate-patches.py  grab-merge.sh  manual-status.py  merge-status.py  mom.service  momlib.py  produce-merges.py  publish-patches.py  pyproject.toml  setup.cfg  stats-graphs.py  stats.py  syndicate.py  update-pool.py  update-sources.py
app/data/: HEADER-merges.html  HEADER-patches.html  merge-blocklist.txt  testing-proposed-updates.txt  unstable.txt
app/deb/: __init__.py  controlfile.py  version.py
app/util/: __init__.py  tree.py
data/: experimental.txt  foundations.exclude  merge-blocklist.txt
deb/: __init__.py  controlfile.py  source.py  version.py
src/: charm.py  merges.py
src/apache/: merges.ubuntu.com.conf  patches.ubuntu.com.conf
src/systemd/: ubuntu-merges.service  ubuntu-merges.timer
tests/unit/: test_charm.py  test_merges.py
util/: __init__.py  shell.py  tree.py
